--- a/about.html
+++ b/about.html
@@ -4,6 +4,28 @@
 </head>
 
 <body>
+  <style>
+    h1 {
+      color: blue;
+      border: solid;
+
+    }
+    img {
+      border: dotted;
+      outline-style: dashed;
+      outline-color: blue;
+    }
+
+    li {
+      border: double;
+      border-width: 30px;
+      outline-style: dashed;
+      outline-width: 15px;
+      outline-color: red;
+    }
+
+
+  </style>
   <h1>About Me</h1>
   <img src= 'images/cat.jpg' width=300>
   <h2>Work History</h2>
